// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPrivacyConsentLabel if \`privacyConsentLabelLinkUrl\` is passed should return the right structure 1`] = `
<label
  className="privacy-consent-label"
>
  <Paragraph
    isCompact={false}
    size="medium"
    weight={null}
  >
    <p
      className=""
    >
      labelText
    </p>
  </Paragraph>
  <Link
    href="labelLinkUrl"
    isFluid={false}
    isPositionedRight={false}
    onClick={[Function]}
    willOpenInNewTab={true}
  >
    <Button
      as="a"
      basic={true}
      floated="left"
      fluid={false}
      href="labelLinkUrl"
      onClick={[Function]}
      target="_blank"
      type="button"
    >
      <Ref
        innerRef={
          Object {
            "current": <a
              class="ui basic left floated button"
              href="labelLinkUrl"
              role="button"
              target="_blank"
              type="button"
            >
              Privacy policy
            </a>,
          }
        }
      >
        <RefFindNode
          innerRef={
            Object {
              "current": <a
                class="ui basic left floated button"
                href="labelLinkUrl"
                role="button"
                target="_blank"
                type="button"
              >
                Privacy policy
              </a>,
            }
          }
        >
          <a
            className="ui basic left floated button"
            href="labelLinkUrl"
            onClick={[Function]}
            role="button"
            target="_blank"
            type="button"
          >
            Privacy policy
          </a>
        </RefFindNode>
      </Ref>
    </Button>
  </Link>
</label>
`;

exports[`getPrivacyConsentLabel if both \`privacyConsentLabelLinkUrl\` and \`privacyConsentLabelLinkText\` are passed should return the right structure 1`] = `
<label
  className="privacy-consent-label"
>
  <Paragraph
    isCompact={false}
    size="medium"
    weight={null}
  >
    <p
      className=""
    >
      labelText
    </p>
  </Paragraph>
  <Link
    href="labelLinkUrl"
    isFluid={false}
    isPositionedRight={false}
    onClick={[Function]}
    willOpenInNewTab={true}
  >
    <Button
      as="a"
      basic={true}
      floated="left"
      fluid={false}
      href="labelLinkUrl"
      onClick={[Function]}
      target="_blank"
      type="button"
    >
      <Ref
        innerRef={
          Object {
            "current": <a
              class="ui basic left floated button"
              href="labelLinkUrl"
              role="button"
              target="_blank"
              type="button"
            >
              labelLinkText
            </a>,
          }
        }
      >
        <RefFindNode
          innerRef={
            Object {
              "current": <a
                class="ui basic left floated button"
                href="labelLinkUrl"
                role="button"
                target="_blank"
                type="button"
              >
                labelLinkText
              </a>,
            }
          }
        >
          <a
            className="ui basic left floated button"
            href="labelLinkUrl"
            onClick={[Function]}
            role="button"
            target="_blank"
            type="button"
          >
            labelLinkText
          </a>
        </RefFindNode>
      </Ref>
    </Button>
  </Link>
</label>
`;

exports[`getPrivacyConsentLabel should return the right structure 1`] = `
<label
  className="privacy-consent-label"
>
  <Paragraph
    isCompact={false}
    size="medium"
    weight={null}
  >
    <p
      className=""
    >
      labelText
    </p>
  </Paragraph>
</label>
`;
